--- a/app/views/partials/tweetlist.hbs
+++ b/app/views/partials/tweetlist.hbs
@@ -1,58 +1,34 @@
-<!--<section class="ui raised segment">-->
-  <!--<div class="ui grid">-->
-    <!--<aside class="six wide column">-->
-      <!--<img src="images/homer5.png" class="ui medium image">-->
-    <!--</aside>-->
-    <!--<article class="eight wide column">-->
-      <!--<table class="ui celled table segment">-->
-        <!--<thead>-->
-        <!--<tr>-->
-          <!--<th>User</th>-->
-          <!--<th>tweet</th>-->
-        <!--</tr>-->
-        <!--</thead>-->
-        <!--<tbody>-->
-        <!--{{#each tweets}}-->
-          <!--<tr>-->
-            <!--<td> {{creator.firstName}} {{creator.lastName}} </td>-->
-            <!--<td> {{text}} </td>-->
-          <!--</tr>-->
-        <!--{{/each}}-->
-        <!--</tbody>-->
-      <!--</table>-->
-    <!--</article>-->
-  <!--</div>-->
-<!--</section>-->
+<div class="ui container">
+  <div class="ui two column padded stacked stackable grid segment">
+    <div class="nine wide column" style="overflow: auto;  height: 600px; max-width: 650px; width: 100%;">
+      <div class="ui threaded comments" >
+        <h3 class="ui dividing header">Your recent History</h3>
+        <div id="userHistory">
 
-<script>
-  console.log("inscript");
-  var box = document.getElementById('userHistory');
-  box.scrollTop = box.scrollHeight;
-</script>
-
-<div class="ui threaded comments">
-  <h3 class="ui dividing header">Your recent History</h3>
-  <div id="userHistory" class="ui segment" style="overflow: scroll;  height: 600px;">
-
-    {{#each tweets}}
-    <div class="comment" >
-      <a class="avatar">
-        <img src="">
-      </a>
-      <div class="content">
-        <a class="author"> {{creator.firstName}} {{creator.lastName}} </a>
-        <div class="metadata">
-          <span class="date">{{date}} </span>
-        </div>
-        <div class="text">
-          {{text}}
-        </div>
-        <div class="actions">
-          <a class="reply">Reply</a>
+          {{#each tweets}}
+            <div class="comment" >
+              <a class="avatar">
+                <img src="">
+              </a>
+              <div class="content">
+                <a class="author"> {{creator.firstName}} {{creator.lastName}} </a>
+                <div class="metadata">
+                  <span class="date">{{dateString}} </span>
+                </div>
+                <div class="text">
+                  {{text}}
+                </div>
+                <div class="actions">
+                  <a class="reply">Reply</a>
+                </div>
+              </div>
+            </div>
+          {{/each}}
         </div>
       </div>
     </div>
-    {{/each}}
-
+    <div class="right floated left aligned six wide column" style="height:300px;">
+      <h3 class="ui dividing header">Top contributors</h3>
+    </div>
   </div>
 </div>
