added baseline requirements + first webapi routes

--- a/app/views/main.hbs
+++ b/app/views/main.hbs
@@ -3,12 +3,11 @@
 
   <section class="ui stacked segment">
     <div class="ui grid">
-      <aside class="six wide column">
-        <img src="images/homer.png" class="ui medium image">
-      </aside>
-      <article class="ten wide column">
-        <header class="ui  header"> Help Me Run Springfield</header>
-        <p> Donate what you can now - No Bitcoins accepted! </p>
+      <!--<aside class="six wide column">-->
+        <!--<img src="images/homer.png" class="ui medium image">-->
+      <!--</aside>-->
+      <article class="ten massive wide column">
+        <h1>Welcome to your new Twitter client!</h1>
       </article>
     </div>
   </section>
