--- a/app/views/signup.hbs
+++ b/app/views/signup.hbs
@@ -30,8 +30,8 @@
           {{> formerror }}
         </div>
       </div>
-      <aside class="ui five wide column">
-        <img src="images/homer3.png" class="ui medium image">
-      </aside>
+      <!--<aside class="ui five wide column">-->
+        <!--<img src="images/homer3.png" class="ui medium image">-->
+      <!--</aside>-->
     </div>
   </section>
