added userlist with cards; implemented default image; added array of users (friends) to user model; implemented viewing user timeline

--- a/app/views/partials/mainmenu.hbs
+++ b/app/views/partials/mainmenu.hbs
@@ -2,13 +2,14 @@
 <section class="ui grid segment">
   <article class="twelve wide stretched column">
     <figure>
-      <img src="images/shot_bird.png" class="ui medium image">
+      <img src="/images/shot_bird.png" class="ui medium image">
     </figure>
   </article>
   <article class="four wide column segment">
     <nav class="ui vertical fluid right menu">
       <a id="home"   class= "item" href="/home"> Home</a>
       <a id="tweet" class= "item" href="/tweet"> Tweet</a>
+      <a id="userlist" class= "item" href="/userlist"> Userlist</a>
       <a id="settings" class= "item" href="/settings"> Settings</a>
       <a id="logout" class= "item" href="/logout"> Logout</a>
     </nav>
