--- a/app/views/partials/welcomemenu.hbs
+++ b/app/views/partials/welcomemenu.hbs
@@ -1,4 +1,4 @@
-<section class="ui grid segment">
+<section class="ui grid orange inverted segment">
   <article class="twelve wide stretched column">
     <figure>
       <img src="images/shot_bird.png" class="ui medium image">
@@ -6,7 +6,7 @@
   </article>
   <article class="four wide column segment">
     <nav class="ui vertical fluid right menu">
-      <a class="item" href="/signup"> Signup</a>
+      <a class="item" href="/signup" > Signup</a>
       <a class="item" href="/login">  Login</a>
     </nav>
   </article>
