added cloudinary support to Twitterroo; changed Usermodel to support picture (+seeding); expanded settings with change picture

--- a/app/views/partials/tweetlistOfUser.hbs
+++ b/app/views/partials/tweetlistOfUser.hbs
@@ -8,7 +8,7 @@
           {{#each tweets}}
             <div class="comment" >
               <a class="avatar">
-                <img src="/images/avatar_placeholder.png">
+                <img src="{{ creator.image }}">
               </a>
               <div class="content">
                 <a class="author"> {{creator.firstName}} {{creator.lastName}} </a>
