--- a/app/views/userlist.hbs
+++ b/app/views/userlist.hbs
@@ -7,7 +7,7 @@
         {{#each user1}}
           <div class="ui card">
             <div class="image">
-              <img src="/images/avatar_placeholder.png">
+              <img src="{{ image }}">
             </div>
             <div class="content">
               <a class="header">{{ firstName }} {{ lastName }}</a>
@@ -40,7 +40,7 @@
         {{#each user2}}
           <div class="ui card">
             <div class="image">
-              <img src="/images/avatar_placeholder.png">
+              <img src="{{ image }}">
             </div>
             <div class="content">
               <a class="header">{{ firstName }} {{ lastName }}</a>
