--- a/app/views/userlist.hbs
+++ b/app/views/userlist.hbs
@@ -1,5 +1,5 @@
 
-  {{> mainmenu }}
+{{> mainmenu _id="userlist"}}
 
   <section class="ui raised segment">
     <div class="ui horizontal segments">
