--- a/app/views/partials/mainmenu.hbs
+++ b/app/views/partials/mainmenu.hbs
@@ -1,15 +1,22 @@
 
 <section class="ui grid segment">
-  <article class="twelve wide stretched column">
+  <article class="nine wide stretched column">
     <figure>
       <img src="/images/shot_bird.png" class="ui medium image">
     </figure>
   </article>
-  <article class="four wide column segment">
+  <article class="three wide column segment">
     <nav class="ui vertical fluid right menu">
       <a id="home"   class= "item" href="/home"> Home</a>
       <a id="tweet" class= "item" href="/tweet"> Tweet</a>
       <a id="userlist" class= "item" href="/userlist"> Userlist</a>
+      <a id="follow" class= "item" href="/tweet/follow"> Timeline Following</a>
+    </nav>
+  </article>
+  <article class="three wide column segment">
+    <nav class="ui vertical fluid right menu">
+      <a id="global"   class= "item" href="/tweet/global"> Timeline Global</a>
+      <a id="statistics" class= "item" href="/home"> Statistics </a>
       <a id="settings" class= "item" href="/settings"> Settings</a>
       <a id="logout" class= "item" href="/logout"> Logout</a>
     </nav>
