changed views for client spa; made first steps to admin account

--- a/app/views/mgmtUser.hbs
+++ b/app/views/mgmtUser.hbs
@@ -1,9 +1,8 @@
 {{#mainMenu adminuser}}
-  {{> mainmenu _id="follow" }}
+  {{> mainmenu _id="home" }}
 {{else}}
-  {{> adminmenu _id="follow" }}
+  {{> adminmenu _id="mgmtUser" }}
 {{/mainMenu}}
-
 <section class="ui raised segment">
-  {{> tweetlistRestricted }}
+  {{> adminUserlist }}
 </section>
