--- a/app/views/partials/welcomemenu.hbs
+++ b/app/views/partials/welcomemenu.hbs
@@ -1,4 +1,4 @@
-<section class="ui grid orange inverted segment">
+<section class="ui grid segment">
   <article class="twelve wide stretched column">
     <figure>
       <img src="images/shot_bird.png" class="ui medium image">
