--- a/app/views/timelineGlobal.hbs
+++ b/app/views/timelineGlobal.hbs
@@ -1,4 +1,8 @@
-{{> mainmenu _id="global" }}
+{{#mainMenu adminuser}}
+  {{> mainmenu _id="global" }}
+{{else}}
+  {{> adminmenu _id="global" }}
+{{/mainMenu}}
 
 <section class="ui raised segment">
   {{> tweetlistRestricted }}
