added admin tweetlist; changed settings view

--- a/app/views/mgmtTweet.hbs
+++ b/app/views/mgmtTweet.hbs
@@ -4,5 +4,5 @@
   {{> adminmenu _id="mgmtTweet" }}
 {{/mainMenu}}
 <section class="ui raised segment">
-  {{> tweetlistRestricted }}
+  {{> tweetlistAdmin }}
 </section>
