--- a/app/views/partials/adminmenu.hbs
+++ b/app/views/partials/adminmenu.hbs
@@ -7,8 +7,8 @@
   </article>
   <article class="three wide column segment">
     <nav class="ui vertical fluid right menu">
-      <a id="manageUser"   class= "item" href="/mgmtUser"> Manage Users</a>
-      <a id="manageTweet" class= "item" href="/mgmtTweet"> Manage Tweets</a>
+      <a id="mgmtUser"   class= "item" href="/mgmtUser"> Manage Users</a>
+      <a id="mgmtTweet" class= "item" href="/mgmtTweet"> Manage Tweets</a>
     </nav>
   </article>
   <article class="three wide column segment">
