--- a/app/views/partials/mainmenu.hbs
+++ b/app/views/partials/mainmenu.hbs
@@ -16,7 +16,7 @@
   <article class="three wide column segment">
     <nav class="ui vertical fluid right menu">
       <a id="global"   class= "item" href="/tweet/global"> Timeline Global</a>
-      <a id="statistics" class= "item" href="/home"> Statistics </a>
+      <a id="stats" class= "item" href="/stats"> Statistics </a>
       <a id="settings" class= "item" href="/settings"> Settings</a>
       <a id="logout" class= "item" href="/logout"> Logout</a>
     </nav>
