--- a/app/views/partials/tweetlist.hbs
+++ b/app/views/partials/tweetlist.hbs
@@ -1,6 +1,6 @@
-<div class="ui container">
-  <div class="ui two column padded stacked stackable grid segment">
-    <div class="nine wide column" style="overflow: auto;  height: 600px; max-width: 650px; width: 100%;">
+
+
+    <div class="ten wide column" style="overflow: auto;  height: 600px; max-width: 650px; width: 100%;">
       <div class="ui threaded comments" >
         <div class="ui container">
           <div class="ui right aligned grid">
@@ -69,11 +69,6 @@
         </div>
       </div>
     </div>
-    <div class="right floated left aligned six wide column" style="height:300px;">
-      <h3 class="ui dividing header">Top contributors</h3>
-    </div>
-  </div>
-</div>
 
 <script>
   function deleteTweet(id){
